apex/force-app/main/default/objects/KountAuthSetting__c.object
<CustomObject>
    <label>Kount Auth Setting</label>
    <description>Stores Kount JWT tokens and expiration epoch</description>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>ExpirationEpoch__c</fullName>
        <label>Expiration (Epoch)</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>
</CustomObject>