apex/force-app/main/default/objects/KountAuthSetting__c/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <description>Kount API Key</description>
    <label>API Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>